--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -39,11 +39,12 @@
         <item name="backgroundSplit">?attr/colorPrimary</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="elevation" tools:targetApi="lollipop">0dp</item>
+        <item name="contentInsetStart">0dp</item>
+        <item name="contentInsetEnd">0dp</item>
+        <!-- actionbar高度设置 -->
         <item name="actionBarSize">@dimen/py_actionbar_height</item>
         <item name="android:actionBarSize">@dimen/py_actionbar_height</item>
         <item name="height">@dimen/py_actionbar_height</item>
-        <item name="contentInsetStart">0dp</item>
-        <item name="contentInsetEnd">0dp</item>
     </style>
 
     <!-- ActionBar样式 -->
