--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -22,5 +22,9 @@
     <color name="c16">#41d7c9</color>
     <color name="c17">#568af3</color>
 
+    <color name="layout_background">#f5f5f5</color>
+    <color name="popupmenu_normal_color">@color/c8</color>
+    <color name="popupmenu_pressed_color">@color/c12</color>
+
 </resources>
 
