--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -21,6 +21,10 @@
     <color name="c15">#3fc4ff</color>
     <color name="c16">#41d7c9</color>
     <color name="c17">#568af3</color>
+    <color name="c18">#bae8e0</color>
+    <color name="c19">#1ab499</color>
+    <color name="c20">#29a1bb</color>
+    <color name="c21">#79eff9</color>
 
     <color name="layout_background">#f5f5f5</color>
     <color name="popupmenu_normal_color">@color/c8</color>
